--- a/views/photo/list-one.hbs
+++ b/views/photo/list-one.hbs
@@ -7,10 +7,10 @@
 
             {{> edit-post this}}
 
-            <div class="rounded overflow-hidden shadow-md hover:shadow-lg my-8">
+            <div class="rounded overflow-hidden shadow-md hover:shadow-lg my-8 w-fit mx-auto">
 
                 <a href="/img/upload/{{this.fileName}}" target="_blank" rel="noreferrer noopener">
-                    <img class=" w-full object-cover rounded" src="{{this.path}}" alt="{{this.title}}">
+                    <img class="w-fit object-cover rounded" src="{{this.path}}" alt="{{this.title}}">
                 </a>
             </div>
     {{/with}}
