--- a/views/partials/deleting-dialog-box.hbs
+++ b/views/partials/deleting-dialog-box.hbs
@@ -1,4 +1,5 @@
 {{#with item}}
+  {{log item}}
 <form action="/{{../pageName}}/{{this.id}}?_method=DELETE" method="POST" id="news-deleting-form"
       class="z-50 fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex content-center border-2 p-4 border-pink-400 rounded px-5 md:px-20 bg-white w-9/12 md:w-auto shadow-md hidden">
     <div class="mx-auto">
