--- a/views/album/add.hbs
+++ b/views/album/add.hbs
@@ -8,15 +8,15 @@
     <div class="text-lg mx-auto">
       <label class="block py-8 ">
         <span class="pb-2 font-semibold">Tytuł</span>
-        <input id="input-news-title" type="text" name="title" minlength="5" maxlength="40" required
+        <input id="input-news-title" type="text" multiple name="title" minlength="5" maxlength="40" required
                class="text-input font-semibold">
         <span id="title-char-counter">0/40</span>
       </label>
       <label class="block mb-2">
         <span class="pb-2 font-semibold">Wybierz zdjęcia</span>
 
-        <input class="block text-input" required name="image" type="file" accept="image/jpeg">
-        <p class="mt-1 text-sm text-gray-500" id="file_input_help">*.JPG, *.JPEG (MAX. 7MB)</p>
+        <input class="block text-input bg-white" required name="image" type="file" accept="image/jpeg">
+        <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania wielu plików na raz, *.JPG, *.JPEG (MAX. 7MB)</p>
       </label>
 
       <div class="text-center">
