--- a/views/album/edit.hbs
+++ b/views/album/edit.hbs
@@ -10,20 +10,27 @@
 
     <header>
       <h2 class="page-title">Edycja albumu z dnia {{this.createdAt}}</h2>
+      <p class="mx-auto w-fit text-lg">Tutaj możesz zmienić tytuł, dodać/usunąć zdjęcia lub usunąć cały album.</p>
     </header>
 
-    <form action="/album/{{this.id}}?_method=PUT" method="POST">
-
+    <form action="/album/{{this.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
       <div class="text-lg mx-auto">
         <label class="block py-8 ">
-          <span class="pb-2 font-semibold">Tytuł</span>
+          <span class="pb-2 font-semibold">Zmień tytuł</span>
           <input id="input-news-title" type="text" name="title" minlength="5" maxlength="40" required
                  value="{{this.title}}"
                  class="text-input font-semibold">
           <span id="title-char-counter">0/40</span>
         </label>
 
-        <div class="text-center pt-8">
+        <label class="block mb-2">
+          <span class="pb-2 font-semibold">Dodaj zdjęcia</span>
+
+          <input class="block text-input bg-white" multiple name="image" type="file" accept="image/jpeg">
+          <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania wielu plików na raz, *.JPG, *.JPEG (MAX. 7MB)</p>
+        </label>
+
+        <div class="text-center">
           <button type="submit" id="send-photo"
                   class="xl-actions-btn font-semibold hover:font-semibold mx-2">
             Zapisz
@@ -60,11 +67,7 @@
       {{/each}}
     </div>
 
-
-
-
   {{/with}}
-
 
 </div>
 </div>
