--- a/views/album/edit.hbs
+++ b/views/album/edit.hbs
@@ -26,8 +26,8 @@
         <label class="block mb-2">
           <span class="pb-2 font-semibold">Dodaj zdjęcia</span>
 
-          <input class="block text-input bg-white" multiple name="image" type="file" accept="image/jpeg">
-          <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania wielu plików na raz, *.JPG, *.JPEG (MAX. 7MB)</p>
+          <input class="block text-input bg-white" name="files" type="file" accept="image/jpeg, image/png, mage/heic, image/heif" multiple>
+          <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG, *PNG, *HEIC, *HEIF (MAX. 7MB/zdjęcie)</p>
         </label>
 
         <div class="text-center">
