--- a/views/album/list-all.hbs
+++ b/views/album/list-all.hbs
@@ -20,7 +20,7 @@
       <a href="/album/{{this.id}}">
       <div class="one-photo rounded overflow-hidden shadow-md hover:shadow-lg hover:text-secondary-focus">
         <img class="photo-img h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer"
-             src="{{this.firstImg.path}}"
+             src="/img/upload/{{this.firstImg.fileName}}"
              alt="{{this.title}}">
         <div class=" p-4">
           <span class="title-span font-bold py-4 text-xl">{{this.title}}</span>
