--- a/views/album/list-one.hbs
+++ b/views/album/list-one.hbs
@@ -12,7 +12,7 @@
       {{#each this.photos}}
         <div class="one-photo rounded overflow-hidden shadow-md hover:shadow-lg">
           <img class="photo-img h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer"
-               src="{{this.path}}"
+               src="/img/upload//{{this.fileName}}"
                alt="Zdjęcie z albumu {{../this.title}}">
 
           <div class="p-4 hidden" id="photo-description">
