--- a/views/album/edit.hbs
+++ b/views/album/edit.hbs
@@ -48,11 +48,11 @@
       {{#each this.photos}}
         <div class="one-photo rounded overflow-hidden shadow-md hover:shadow-lg">
           <img class="photo-img h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer"
-               src="{{this.path}}"
+               src="/img/upload//{{this.fileName}}"
                alt="Zdjęcie z albumu {{../this.title}}">
 
           <div>
-            <form action="/photo/{{this.id}}?_method=DELETE" method="POST">
+            <form action="/photo/{{this.fileName}}/{{../this.id}}?_method=DELETE" method="POST">
               <div class="dropdown dropdown-top">
                 <label tabindex="0" class="btn btn-ghost border-2 m-1">Usuń zdjęcie</label>
                 <ul tabindex="0" class="dropdown-content menu z-50 p-2 shadow-md bg-base-100 rounded-box w-52">
