--- a/views/album/add.hbs
+++ b/views/album/add.hbs
@@ -8,7 +8,7 @@
     <div class="text-lg mx-auto">
       <label class="block py-8 ">
         <span class="pb-2 font-semibold">Tytuł</span>
-        <input id="input-news-title" type="text" name="title" minlength="5" maxlength="40" required
+        <input id="input-title" type="text" name="title" minlength="5" maxlength="40" required
                class="text-input font-semibold">
         <span id="title-char-counter">0/40</span>
       </label>
@@ -21,12 +21,12 @@
 
       <div class="text-center">
         <button type="submit" id="send-article"
-                class="xl-actions-btn font-semibold hover:font-semibold mx-2">
+                class="actions-btn mx-2">
           Dodaj
         </button>
 
         <a href="/album"
-           class="xl-actions-btn hover:font-normal mx-2">Anuluj</a>
+           class="actions-btn mx-2">Anuluj</a>
       </div>
 
 
