--- a/views/album/list-all.hbs
+++ b/views/album/list-all.hbs
@@ -6,12 +6,13 @@
 
   <div class="one-article">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
-      distinctio doloremque eaque error harum illum incidunt.</p>
+      distinctio doloremque eaque error harum illum incidunt.
+    </p>
   </div>
 
   <div class="flex justify-center py-4">
     <a href="/album/dodaj"
-       class="xl-actions-btn hover:font-normal">Dodaj
+       class="actions-btn">Dodaj
       nowy wpis</a>
   </div>
 
