--- a/views/album/list-one.hbs
+++ b/views/album/list-one.hbs
@@ -26,7 +26,7 @@
   {{/with}}
 
   <div class="flex justify-center">
-    <a href="/album" class="text-center semibold-link-with-hover pt-4">Powrót do albumu</a>
+    <a href="/album" class="text-center semibold-link-with-hover pt-4">Powrót do listy albumów</a>
   </div>
 
 </article>
