--- a/views/album/success.hbs
+++ b/views/album/success.hbs
@@ -4,11 +4,11 @@
   </header>
 
   {{#if id}}
-    <div class="bold-link-with-hover text-center"><a href="/album/{{idOfAlbum}}">Wyświetl</a></div>
+    <div class="bold-link-with-hover text-center"><a href="/album/{{idOfAlbum}}">Wyświetl ten album</a></div>
   {{/if}}
 
 
-  <div class="bold-link-with-hover text-center"><a href="/album">Przejdź do albumu</a></div>
+  <div class="bold-link-with-hover text-center"><a href="/album">Przejdź do listy albumów</a></div>
   <div class="bold-link-with-hover text-center">{{>go-home}}</div>
 
 </div>
