--- a/views/news/list-all.hbs
+++ b/views/news/list-all.hbs
@@ -6,7 +6,7 @@
 
         <div class="flex justify-center">
             <a href="/aktualnosci/dodaj"
-               class="xl-actions-btn font-normal hover:font-normal">Dodaj
+               class="actions-btn">Dodaj
                 nowy wpis</a>
         </div>
 
