--- a/views/news/add.hbs
+++ b/views/news/add.hbs
@@ -21,12 +21,12 @@
 
             <div class="text-center">
                 <button type="submit" id="send-article"
-                        class="xl-actions-btn hover:font-semibold font-semibold mx-2">
+                        class="actions-btn mx-2">
                     Dodaj
                 </button>
 
                 <a href="/aktualnosci"
-                   class="xl-actions-btn hover:font-normal mx-2">Anuluj</a>
+                   class="actions-btn mx-2">Anuluj</a>
             </div>
         </div>
     </form>
