--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -35,17 +35,17 @@
 
                 <div class="text-center">
                     <button type="submit" id="send-article"
-                            class="xl-actions-btn mx-2 font-semibold hover:font-semibold">
+                            class="actions-btn mx-2">
                         Zapisz
                     </button>
 
                     <button type="button" id="show-deleting-form-btn"
-                            class="xl-actions-btn hover:font-normal mx-2 my-2 sm:my-0">
+                            class="actions-btn mx-2 my-2 sm:my-0">
                         Usuń wpis
                     </button>
 
                     <a href="/aktualnosci/{{this.id}}"
-                       class="xl-actions-btn hover:font-normal mx-2 mt-2 sm:my-0">Anuluj</a>
+                       class="actions-btn mx-2 mt-2 sm:my-0">Anuluj</a>
 
                 </div>
             </form>
