--- a/src/style/input.css
+++ b/src/style/input.css
@@ -55,3 +55,15 @@
 .link-with-hover {
     @apply hover:text-secondary-focus text-lg
 }
+
+.all-photos-container {
+    @apply grid md:grid-cols-2 gap-10 pt-8 pb-12
+}
+
+.photo-card {
+    @apply rounded overflow-hidden shadow-md hover:shadow-lg
+}
+
+.image {
+    @apply h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer
+}
