--- a/views/album/add.hbs
+++ b/views/album/add.hbs
@@ -1,4 +1,5 @@
 <div class="container-for-article">
+
   <header>
     <h2 class="page-title">Dodaj nowy album</h2>
   </header>
@@ -6,17 +7,28 @@
   <form action="/album" method="POST" enctype="multipart/form-data">
 
     <div class="text-lg mx-auto">
+
       <label class="block py-8 ">
         <span class="pb-2 font-semibold">Tytuł</span>
-        <input id="input-title" type="text" name="title" minlength="5" maxlength="40" required
-               class="text-input font-semibold">
+        <input
+          id="input-title"
+          type="text"
+          name="title"
+          minlength="5"
+          maxlength="40"
+          required
+          class="text-input font-semibold"
+        >
         <span id="title-char-counter">0/40</span>
       </label>
+
       <label class="block mb-2">
         <span class="pb-2 font-semibold">Wybierz zdjęcia</span>
 
-        <input class="block text-input bg-white" required name="files" type="file" accept="image/jpeg, image/png, mage/heic, image/heif" multiple>
-        <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG, *PNG, *HEIC, *HEIF (MAX. 7MB/zdjęcie)</p>
+        <input class="block text-input bg-white" required name="files" type="file"
+               accept="image/jpeg, image/png, mage/heic, image/heif" multiple>
+        <p class="mt-1 text-sm text-gray-500" id="file_input_help">Możliwość dodania do 10 plików na raz, *.JPG, *.JPEG,
+          *PNG, *HEIC, *HEIF (MAX. 7MB/zdjęcie)</p>
       </label>
 
       <div class="text-center">
@@ -28,7 +40,6 @@
         <a href="/album"
            class="actions-btn mx-2">Anuluj</a>
       </div>
-
 
     </div>
   </form>
