--- a/views/album/list-all.hbs
+++ b/views/album/list-all.hbs
@@ -11,23 +11,24 @@
   </div>
 
   <div class="flex justify-center py-4">
-    <a href="/album/dodaj"
-       class="actions-btn">Dodaj
-      nowy wpis</a>
+    <a href="/album/dodaj" class="actions-btn">
+      Dodaj nowy wpis
+    </a>
   </div>
 
-  <div class="grid md:grid-cols-2 gap-10 pt-8 pb-12">
+  <div class="all-photos-container">
     {{#each albums}}
       <a href="/album/{{this.id}}">
-      <div class="one-photo rounded overflow-hidden shadow-md hover:shadow-lg hover:text-secondary-focus">
-        <img class="photo-img h-60 sm:h-80 md:h-64 w-full object-cover rounded hover:cursor-pointer"
-             src="/img/upload/{{this.firstImg.fileName}}"
-             alt="{{this.title}}">
-        <div class=" p-4">
-          <span class="title-span font-bold py-4 text-xl">{{this.title}}</span>
-          <span class="createdAt-span text-basic flex">{{this.createdAt}}, {{this.numberOfPhotos}} {{> photo-svg}}</span>
+        <div class="photo-card one-photo hover:text-secondary-focus">
+          <img class="photo-img image"
+               src="/img/upload/{{this.firstImg.fileName}}"
+               alt="{{this.title}}">
+          <div class=" p-4">
+            <span class="title-span font-bold py-4 text-xl">{{this.title}}</span>
+            <span class="createdAt-span text-basic flex">{{this.createdAt}}
+              , {{this.numberOfPhotos}} {{> photo-svg}}</span>
+          </div>
         </div>
-      </div>
       </a>
     {{/each}}
   </div>
