More code refactor.

--- a/views/partials/deleting-dialog-box.hbs
+++ b/views/partials/deleting-dialog-box.hbs
@@ -3,16 +3,13 @@
     action="/{{../pageName}}/{{this.id}}?_method=DELETE"
     method="POST"
     id="news-deleting-form"
-    class="z-50 fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex content-center border-2 p-4 border-pink-400 rounded px-5 md:px-20 bg-white w-9/12 md:w-auto shadow-md hidden"
+    class="z-50 fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex content-center border-2 p-4 rounded px-5 md:px-20 bg-white w-9/12 md:w-auto shadow-md hidden"
   >
     <div class="mx-auto">
       <span class="block text-center text-2xl py-6 font-semibold">Czy na pewno?</span>
       <div class="text-center block pb-6">
 
-        <button
-          type="submit"
-          class="actions-btn mt-2"
-        >
+        <button type="submit" class="actions-btn mt-2">
           Usuń
         </button>
 
