--- a/views/album/list-all.hbs
+++ b/views/album/list-all.hbs
@@ -26,7 +26,7 @@
           <div class=" p-4">
             <span class="title-span font-bold py-4 text-xl">{{this.title}}</span>
             <span class="createdAt-span text-basic flex">{{this.createdAt}}
-              , {{this.numberOfPhotos}} {{> photo-svg}}</span>
+              , {{this.numberOfPhotos}} {{> album/photo-svg}}</span>
           </div>
         </div>
       </a>
