Cleaned up styles.

--- a/views/error/authorization-error.hbs
+++ b/views/error/authorization-error.hbs
@@ -4,7 +4,7 @@
     <h3 class="small-title">{{message}}</h3>
 
     <div class="text-center text-lg">
-        <span class="hover:text-pink-400 font-bold">{{>go-home}}</span>
+        <span class="hover:text-secondary-focus font-bold">{{>go-home}}</span>
         lub
-        <a class="hover:text-pink-400 font-bold" href="/session/new">zaloguj się</a></div>
+        <a class="hover:text-secondary-focus font-bold" href="/session/new">zaloguj się</a></div>
 </div>
