--- a/views/error/other-error.hbs
+++ b/views/error/other-error.hbs
@@ -3,6 +3,6 @@
 
     <h3 class="small-title">{{message}}</h3>
 
-    <div class="text-center text-lg font-bold hover:text-pink-400">{{>go-home}}</div>
+    <div class="text-center text-lg font-bold hover:text-secondary-focus">{{>go-home}}</div>
 </div>
 
