--- a/views/home/about.hbs
+++ b/views/home/about.hbs
@@ -1,9 +1,16 @@
 <article class="container-for-article">
-    <header>
-        <h2 class="page-title">O przedszkolu</h2>
-    </header>
+  <header>
+    <h2 class="page-title">O przedszkolu</h2>
+  </header>
 
-    <div class="one-article">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque debitis dignissimos est eveniet incidunt libero magnam, maxime minus molestias nobis. Autem consequatur, culpa deleniti iusto magni obcaecati repellendus! Illo, quam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi dignissimos, doloribus in maxime quidem quos! Aspernatur assumenda blanditiis dignissimos odio officia quasi suscipit veritatis. Hic incidunt placeat tempore voluptatum?</p>
-    </div>
+  <div class="one-article">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque debitis dignissimos est eveniet
+      incidunt libero magnam, maxime minus molestias nobis. Autem consequatur, culpa deleniti iusto magni obcaecati
+      repellendus! Illo, quam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi dignissimos,
+      doloribus in maxime quidem quos! Aspernatur assumenda blanditiis dignissimos odio officia quasi suscipit
+      veritatis. Hic incidunt placeat tempore voluptatum?
+    </p>
+  </div>
 </article>
