--- a/views/home/employees.hbs
+++ b/views/home/employees.hbs
@@ -1,9 +1,13 @@
 <article class="container-for-article">
-    <header>
-        <h2 class="page-title">Pracownicy przedszkola</h2>
-    </header>
+  <header>
+    <h2 class="page-title">Pracownicy przedszkola</h2>
+  </header>
 
-    <div class="one-article">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?</p>
-    </div>
+  <div class="one-article">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+    </p>
+  </div>
 </article>
