--- a/views/partials/privacy-policy.hbs
+++ b/views/partials/privacy-policy.hbs
@@ -4,10 +4,11 @@
 >
   <p class="block mx-auto items-center text-center pb-4 ">
     Ta strona korzysta z plików cookies zgodnie z <a
-      class="underline hover:text-pink-400"
-      href="/polityka-prywatnosci"
-    >
-      Polityką Prywatności</a>. Możesz określić warunki przechowywania lub dostępu mechanizmu cookie w Twojej przeglądarce.
+    class="underline hover:text-pink-400"
+    href="/polityka-prywatnosci"
+  >
+    Polityką Prywatności</a>. Możesz określić warunki przechowywania lub dostępu mechanizmu cookie w Twojej
+    przeglądarce.
   </p>
 
   <div class="flex justify-center">
