--- a/views/album/success.hbs
+++ b/views/album/success.hbs
@@ -4,7 +4,7 @@
   </header>
 
   {{#if id}}
-    <div class="bold-link-with-hover text-center"><a href="/album/{{idOfAlbum}}">Wyświetl ten album</a></div>
+    <div class="bold-link-with-hover text-center"><a href="/album/{{id}}">Wyświetl ten album</a></div>
   {{/if}}
 
 
