--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1,58 +1,5 @@
-<div class="hero min-h-screen" style="background-image: url(/img/hero.jpg);">
-  <div class="hero-overlay bg-opacity-20"></div>
-  <div class="hero-content text-center text-white">
-    <div class="max-w-md">
-      <h1 class="text-4xl lg:text-5xl font-bold">ZAPRASZAMY</h1>
-      <p class="py-6 text-xl">Lorem ipsum dolor sit amet!</p>
-    </div>
-  </div>
-</div>
+{{> home/main-hero}}
 
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content flex-col-reverse lg:flex-row-reverse">
-    <img src="/img/home.jpg" alt="zdjęcie promocyjne" class="max-w-[20rem] rounded-full shadow-lg" />
-    <div>
-      <h1 class="text-5xl font-bold">Dlaczego my?</h1>
-      <p class="py-6 pr-6 text-justify lg:text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
-        culpa
-        dignissimos
-        distinctio dolorem
-        doloremque ducimus illo laboriosam laudantium maxime natus nisi, quaerat quos ratione rerum sapiente sed
-        soluta vel vitae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cumque
-        dignissimos dolorem ea est
-        fugiat laboriosam nemo, officiis perspiciatis sunt tenetur vel, velit veniam veritatis voluptas! A
-        eligendi fugit natus? Ab aspernatur, aut esse excepturi impedit ipsum iste magni officiis optio porro,
-        quasi voluptatibus.
-        Asperiores commodi consequatur obcaecati, odio quasi vitae. Adipisci architecto autem eaque iste laborum
-        nam nulla unde?</p>
-    </div>
-  </div>
-</div>
+{{> home/why-us}}
 
-<div class="hero min-h-screen bg-primary text-white">
-  <div class="hero-content text-center">
-    <div class="w-full">
-      <h2 class="text-5xl font-bold pb-10">Z życia przedszkola</h2>
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 w-full">
-        {{#each shorterFirstNews}}
-          <div class="flex flex-col relative">
-            <h3 class="font-semibold text-2xl pt-2 text-start whitespace-pre-wrap break-all">{{this.title}}</h3>
-            <h4 class="text-start pb-2">{{this.createdAt}}</h4>
-            <p
-              class="py-4 pb-8 text-justify whitespace-pre-wrap break-all flex justify-center mb-auto">{{this.article}}{{#if
-              this.isTooLong}}...{{/if}}</p>
-            {{#if this.isTooLong}}
-              <a class="btn btn-ghost border-white font-bold uppercase mt-auto w-fit" href="/aktualnosci/{{this.id}}">czytaj
-                dalej</a>
-            {{/if}}
-          </div>
-
-        {{/each}}
-      </div>
-      <div class="flex justify-center pt-10">
-        <a class="btn btn-ghost font-bold uppercase mt-auto w-fit uppercase" href="/aktualnosci">Przejdź do
-          aktualności</a>
-      </div>
-    </div>
-  </div>
-</div>
+{{> home/recent-news}}
