--- a/views/home/implemented-programs.hbs
+++ b/views/home/implemented-programs.hbs
@@ -1,26 +1,42 @@
 <article class="container-for-article">
-    <header>
-        <h2 class="page-title">Realizowane programy oraz certyfikaty</h2>
-        <h3 class="small-title">Realizowane programy</h3>
-    </header>
+  <header>
+    <h2 class="page-title">Realizowane programy oraz certyfikaty</h2>
+    <h3 class="small-title">Realizowane programy</h3>
+  </header>
 
-    <div class="one-article">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?</p>
-    </div>
+  <div class="one-article">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?</p>
+  </div>
 </article>
 
 <article class="container-for-article">
-    <header>
-        <h3 class="small-title">Certyfikaty</h3>
-    </header>
+  <header>
+    <h3 class="small-title">Certyfikaty</h3>
+  </header>
 
-    <div class="one-article">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur ullam vel?</p>
-    </div>
+  <div class="one-article">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus ad adipisci consectetur, dignissimos
+      distinctio doloremque eaque error harum illum incidunt ipsum minima natus pariatur quibusdam, tempore tenetur
+      ullam vel?</p>
+  </div>
 </article>
