--- a/views/news/success.hbs
+++ b/views/news/success.hbs
@@ -3,8 +3,8 @@
     <h2 class="page-title">Sukces! {{message}}</h2>
   </header>
 
-  {{#if idOfNews}}
-    <div class="bold-link-with-hover text-center"><a href="/aktualnosci/{{idOfNews}}">Wyświetl wpis</a></div>
+  {{#if id}}
+    <div class="bold-link-with-hover text-center"><a href="/aktualnosci/{{id}}">Wyświetl wpis</a></div>
   {{/if}}
 
   <div class="bold-link-with-hover text-center"><a href="/aktualnosci">Przejdź do aktualności</a></div>
