--- a/views/partials/layout/header.hbs
+++ b/views/partials/layout/header.hbs
@@ -23,7 +23,7 @@
       <li><a href="/oplaty">Opłaty</a></li>
       <li><a href="/ochrona-danych-osobowych">Ochrona danych osobowych</a></li>
       {{#unless userLoggedIn}}
-        <li><a href="/logowanie">Logowanie</a></li>
+        <li><a href="/auth/login">Logowanie</a></li>
       {{/unless}}
     </ul>
   </div>
@@ -55,7 +55,7 @@
           <li><a href="/organizacja-pracy">Organizacja pracy</a></li>
           <li><a href="/album">Album fotograficzny</a></li>
           {{#unless userLoggedIn}}
-            <li><a href="/logowanie">Logowanie</a></li>
+            <li><a href="/auth/login">Logowanie</a></li>
           {{/unless}}
         </ul>
       </li>
