--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2320,6 +2320,11 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-success {
+  --tw-text-opacity: 1;
+  color: hsl(var(--su) / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
