--- a/views/news/list-one.hbs
+++ b/views/news/list-one.hbs
@@ -5,7 +5,9 @@
 
     <h3 class="text-center pb-10 pt-2">Data: {{this.createdAt}}</h3>
 
-    {{> edit-post this}}
+    {{#if userLoggedIn}}
+      {{> edit-post this}}
+    {{/if}}
 
     <div class="text-xl whitespace-pre-wrap break-all flex justify-center text-justify">
       <span>{{this.article}}</span>
