--- a/views/album/list-one.hbs
+++ b/views/album/list-one.hbs
@@ -7,7 +7,9 @@
 
     <h3 class="text-center pb-10 pt-2">{{this.createdAt}}</h3>
 
-    {{> edit-post this}}
+    {{#if ../userLoggedIn}}
+      {{> edit-post this}}
+    {{/if}}
 
     <div class="all-photos-container">
       {{#each this.photos}}
