--- a/views/partials/album/photo-gallery.hbs
+++ b/views/partials/album/photo-gallery.hbs
@@ -3,33 +3,16 @@
 
   <div id="slider-menu"
        class="flex w-full justify-between px-4 fixed top-0 left-0 my-1">
-    <div id="slider-title"
-         class="inline-block text-lg rounded border-[1px] border-gray-600 md:border-transparent hover:border-white bg-black bg-opacity-60 transition ease-in-out duration-1000 inline-block h-fit break-words w-auto max-w-[50%] leading-none md:leading-normal">
+    <div
+      id="slider-title"
+      class="inline-block text-lg rounded border-[1px] border-gray-600 md:border-transparent hover:border-white bg-black bg-opacity-60 transition ease-in-out duration-1000 inline-block h-fit break-words w-auto max-w-[50%] leading-none md:leading-normal"
+    >
     </div>
+
     <div class="mt-1">
-      <button id="prev-photo-btn"
-              class="slider-actions-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-             stroke="currentColor" class="w-8 sm:w-10 h-8 sm:h-10">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
-        </svg>
-      </button>
-
-      <button id="next-photo-btn"
-              class="slider-actions-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-             stroke="currentColor" class="w-8 sm:w-10 h-8 sm:h-10">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
-        </svg>
-      </button>
-
-      <button id="close-btn"
-              class="slider-actions-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-             stroke="currentColor" class="w-8 sm:w-10 h-8 sm:h-10">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-        </svg>
-      </button>
+      {{> album/prev-photo-btn}}
+      {{> album/next-photo-btn}}
+      {{> album/close-gallery-btn}}
     </div>
   </div>
 
